--- a/huo/src/main/resources/application-dev.properties
+++ b/huo/src/main/resources/application-dev.properties
@@ -6,54 +6,23 @@ spring.datasource.username=root
 #spring.datasource.password=123456
 spring.datasource.password=keying@123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#druid
-#spring.datasource.druid.initial-size=5
-#spring.datasource.druid.max-active=50
-#spring.datasource.druid.min-idle=5
-#spring.datasource.druid.max-wait=60000
-#spring.datasource.druid.default-auto-commit=true
-#spring.datasource.druid.validation-query=SELECT 1 FROM DUAL
-#spring.datasource.druid.validation-query-timeout=60000
-#spring.datasource.druid.test-on-borrow=false
-#spring.datasource.druid.test-on-return=false
-#spring.datasource.druid.test-while-idle=true
-#spring.datasource.druid.time-between-eviction-runs-millis=60000
-#spring.datasource.druid.min-evictable-idle-time-millis=300000
 
-#spring.datasource.primary.test-while-idle=true
-#spring.datasource.primary.test-on-borrow=false
-#spring.datasource.primary.test-on-return=false
-#spring.datasource.primary.validation-query=SELECT 1 FROM DUAL
-#spring.datasource.primary.time-between-eviction-runs-millis=300000
-#spring.datasource.primary.min-evictable-idle-time-millis=1800000
-#spring.datasource.primary.initial-size=5
-#spring.datasource.primary.max-active=50
-#spring.datasource.primary.max-wait=60000
-#spring.datasource.primary.min-idle=5
-######  db config end ###### 
-
-######   Redis config start ###### 
-#spring.redis.database=0
-#spring.redis.host=47.94.191.18
-#spring.redis.port=6388
-#spring.redis.password=Thussat2017
-#spring.redis.jedis.pool.max-active=20
-#spring.redis.jedis.pool.max-wait=-1
-#spring.redis.jedis.pool.max-idle=8
-#spring.redis.jedis.pool.min-idle=0
-#spring.redis.timeout=0
-######   Redis config end ###### 
-
-######   logging config start ###### 
-#logging.file=E:/workspace/eclipse-workspace/paper/paper.log
-#logging.level.com.favorites=INFO
-#logging.level.org.springframework.web=INFO
-#logging.level.org.hibernate=ERROR
-######   logging config end ###### 
-
-######   sparta config start ###### 
-#sparta.file.save.path=static/file/logo/
-#sparta.file.access.url=http://127.0.0.1:8080/file/logo/
-#sparta.base.path=http://127.0.0.1:8080/
-######   favorites config end ###### 
+# Redis数据库索引（默认为0）
+spring.redis.database=0
+# Redis服务器地址
+spring.redis.host=127.0.0.1
+# Redis服务器连接端口
+spring.redis.port=6379
+# Redis服务器连接密码（默认为空）
+spring.redis.password=
+# 连接池最大连接数（使用负值表示没有限制）
+spring.redis.jedis.pool.max-active=20
+# 连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.jedis.pool.max-wait=-1
+# 连接池中的最大空闲连接
+spring.redis.jedis.pool.max-idle=10
+# 连接池中的最小空闲连接
+spring.redis.jedis.pool.min-idle=0
+# 连接超时时间（毫秒）
+spring.redis.timeout=5000
 
